# fast_decimal

./: .gitignore  Cargo.toml  LICENSE  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: convert.rs  decimal.rs  error.rs  format.rs  lib.rs  ops.rs  parse.rs  rounding.rs  serde.rs  util.rs  wide.rs
tests/: compat.rs  decimal.rs  macros.rs  ui.rs
tests/ui/: dec_too_many_digits.rs  dec_too_many_digits.stderr
