[package]
name = "fast_decimal"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A fast fixed-scale decimal for Web3 finance"
readme = "README.md"
repository = "https://github.com/JigglyPuffs/fast_decimal"
categories = ["data-structures", "mathematics"]
keywords = ["decimal", "fixed-point", "finance", "web3"]
rust-version = "1.82"

[workspace]
members = ["macros"]

[lib]
name = "fast_decimal"
path = "src/lib.rs"

[dependencies]
fast_decimal_macros = { version = "0.1.0", path = "macros", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
fast_decimal_macros = { version = "0.1.0", path = "macros" }
serde_json = "1"
trybuild = "1"

[features]
default = []
macros = ["dep:fast_decimal_macros"]
serde = ["dep:serde"]
